.provarCaches/00D5f000005vwGkEAI/objects/rstkf__appsecurityf__c.object
<CustomObject>
    <description>appsecurityf__c</description>
    <fields>
        <fullName>rstkf__RS_Financials_Support_Functions__c</fullName>
        <label>RS Financials Support Functions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_1099list__c</fullName>
        <label>1099 List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_Agedtrialbalancereport__c</fullName>
        <label>AP Aging Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_ap1099__c</fullName>
        <label>1099 Generate and Print</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apVoucherReport__c</fullName>
        <label>Payable Edit List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apaftstub__c</fullName>
        <label>AP EFT Payment Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apagingh__c</fullName>
        <description>AP Aging Drill Down Header</description>
        <inlineHelpText>AP Aging Drill Down Header</inlineHelpText>
        <label>AP Aging Drill Down Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apagingreport__c</fullName>
        <label>AP Aging Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apapplic__c</fullName>
        <label>Payable Application Transcation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apapplicforex__c</fullName>
        <label>Foreign Exchange Gain/Loss on App</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apato__c</fullName>
        <label>AP Add Transaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apbatchtransfer__c</fullName>
        <label>Posting By Session</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apcheck__c</fullName>
        <label>Accounts Payable Check</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apcheckstub__c</fullName>
        <label>AP Check Stub Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apcntl__c</fullName>
        <label>AP Control</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apeft__c</fullName>
        <label>Accounts Payable EFT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apgrouptransfer__c</fullName>
        <label>Posting By Transaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apinvdist__c</fullName>
        <label>Payables Distribution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apinvh__c</fullName>
        <label>Payable Session</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apinvline__c</fullName>
        <label>Payables Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apinvlineforex__c</fullName>
        <label>Foreign Exchange Gain/Loss on Receipt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apinvtxn__c</fullName>
        <label>Payable Transaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apinvtxnforex__c</fullName>
        <label>Foreign Exchange Gain/Loss on Invoice</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_appayd__c</fullName>
        <label>Payments Session Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_appayh1__c</fullName>
        <label>Payments Session Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_appayh__c</fullName>
        <label>Payments Batch Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_appayselectaudit__c</fullName>
        <label>Payments Selection Audit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_approcess__c</fullName>
        <label>Change Payment Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_apwht__c</fullName>
        <label>Withholding Tax Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_aragedtrialbal__c</fullName>
        <label>AR Aging Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_aragingh__c</fullName>
        <description>AR Aging Drill Down Header</description>
        <inlineHelpText>AR Aging Drill Down Header</inlineHelpText>
        <label>AR Aging Drill Down Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_aragingreport__c</fullName>
        <label>AR Aging Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_arapplic__c</fullName>
        <label>Receivable Application Transaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_arato__c</fullName>
        <label>AR Add Transaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_arcashd__c</fullName>
        <label>Cash Receipts Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_arcashddist__c</fullName>
        <label>Cash Receipts Distribution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_arcashh__c</fullName>
        <label>Cash Receipts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_arcntl__c</fullName>
        <label>AR Control</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_arinvdist__c</fullName>
        <label>Receivable Transaction Distribution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_arinvdue__c</fullName>
        <label>Receivable Transaction Scheduled Payment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_arinvh__c</fullName>
        <label>Receivable Session</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_arinvtxn__c</fullName>
        <label>Receivable Transaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_armemoregister__c</fullName>
        <label>AR Debit / Credit Memo Register</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_arnoncashtransfers__c</fullName>
        <label>AR Non-cash Transfers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_arsalesinvoicereview__c</fullName>
        <label>Sales Invoice Review and Mass Post</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_arstatandfincharges__c</fullName>
        <label>Customer Statements and Finance Charges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_bankcardtt__c</fullName>
        <description>Bank Card Transaction Template</description>
        <label>Bank Card Transaction Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_buildglaystmt__c</fullName>
        <label>Perform Financial Report Data Roll-up</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_cashreceiptsjournal__c</fullName>
        <label>Cash Receipts Journal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_cashreqreport__c</fullName>
        <label>Cash Requirements Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_clonechartofaccounts__c</fullName>
        <label>Clone Chart of Accounts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_crato__c</fullName>
        <label>CR Add Transaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_dimvals__c</fullName>
        <label>Dimension Values</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_finstmttmpltest__c</fullName>
        <label>Test Report Templates for Completeness</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_fsa__c</fullName>
        <label>Financial System Admin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_fss__c</fullName>
        <label>Financial System Setup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glacct__c</fullName>
        <label>GL Accounts (Chart of Accounts)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glapcc__c</fullName>
        <label>Credit Card Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glato__c</fullName>
        <label>GL Add Transaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glaybud__c</fullName>
        <label>Financial Budget</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glbankacct__c</fullName>
        <label>Bank Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glbankacctreconcile__c</fullName>
        <label>Bank Reconciliation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glbankcardreconcile__c</fullName>
        <description>Bank Card Reconcile</description>
        <label>Bank Card Reconcile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glbankstmtreconcile__c</fullName>
        <description>Bank Statement Reconciliation</description>
        <inlineHelpText>Bank Statement Reconciliation</inlineHelpText>
        <label>Bank Statement Reconciliation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glbanktxn__c</fullName>
        <label>Bank Account Transaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glcloseProcessor__c</fullName>
        <label>Period Close</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glcmp__c</fullName>
        <label>Finance Company Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glcmpdimset__c</fullName>
        <label>Z_OBSOLETE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_gldiv__c</fullName>
        <label>Finance Division Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glfstmplt1__c</fullName>
        <label>Define Financial Statement Templates</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glfstmplt6__c</fullName>
        <label>External Data Mapping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glfstmplt7__c</fullName>
        <label>Subline Group Mapping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glhistrate__c</fullName>
        <label>GL Historical Rate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_gljestdid__c</fullName>
        <label>Journal Entry Standard ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_gljetemplth__c</fullName>
        <label>Journal Entry Templates</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_gljh__c</fullName>
        <label>General Journal Entry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_gljhprint__c</fullName>
        <description>Print General Journal Entries</description>
        <inlineHelpText>Print General Journal Entries</inlineHelpText>
        <label>Print General Journal Entries</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_gljhworkbench__c</fullName>
        <label>General Journal Workbench</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glproj__c</fullName>
        <label>Financial Project Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glrsn__c</fullName>
        <label>Reason Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glstmtntryh__c</fullName>
        <label>Translate Data into Parent Company Curr</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_gltrialbalance__c</fullName>
        <label>Postings Summary Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_gltxn__c</fullName>
        <label>GL Transactions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_gltxninquiry__c</fullName>
        <label>GL Transaction Inquiry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glusr__c</fullName>
        <label>Financial System User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glusrcmp__c</fullName>
        <label>Financial System User Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_glyear__c</fullName>
        <label>Fiscal Year</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_initialiazeCompAndUsrs__c</fullName>
        <label>Initialize Companies and Users</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_mcurr__c</fullName>
        <label>Multiple Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_monthlychkreg__c</fullName>
        <label>Payment Register By Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_paymentOffsetProcessing__c</fullName>
        <label>Payment Offset Processing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_paysession__c</fullName>
        <label>Payment Selection</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_periodAndJEChkList__c</fullName>
        <label>Period Close Checklist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_perpayreg__c</fullName>
        <label>Payment Register</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_povclasscmpno__c</fullName>
        <label>Vendor Class Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_povendcmpno__c</fullName>
        <label>Vendor Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_processlogf__c</fullName>
        <label>GLProcesslog</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_quickcashreceipts__c</fullName>
        <label>Quick Cash Receipts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_sigpaybatch__c</fullName>
        <label>Payment Register By Session</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_socustcmpno__c</fullName>
        <label>Customer Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_statementmaint__c</fullName>
        <label>Display/Print/Export Financial Reports</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_statementrun__c</fullName>
        <label>Run Financial Statements</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_syforexschedno__c</fullName>
        <label>Foreign Exchange Rate Schedule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_ufxhead__c</fullName>
        <label>UFX Run</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_vendorcrapp__c</fullName>
        <label>Credit Memo Application Query</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_voidappayments__c</fullName>
        <label>Void AP Payments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_whtcertwb__c</fullName>
        <label>WHT Certificate Workbench</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__m_whtreturnwb__c</fullName>
        <label>WHT Return Workbench</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ms_ap__c</fullName>
        <label>Accounts Payable</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ms_apsetup__c</fullName>
        <label>Accounts Payable Setup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ms_ar__c</fullName>
        <label>Accounts Receivable</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ms_financialreporting__c</fullName>
        <label>Financial Reporting</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ms_glsetup__c</fullName>
        <label>General Ledger</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__updatecustagingadhocstmts__c</fullName>
        <label>Update Customer Aging and Ad Hoc Stateme</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Application Security Financial</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Security Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>